syntax = "proto3";
package database_delivery;

option go_package = "go.easyops.local/contracts/protorepo-models/easyops/model/database_delivery";





/*
应用
*/
message Application {
    /*
    应用 ID
    */
    string instanceId = 1 ;
    /*
    名称
    */
    string name = 2 ;
    /*
    描述
    */
    string memo = 3 ;
}

